validations for case and witness